# next_extra_primary

./: .actrc  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  agents.md  conanbuild.sh  conanbuildenv-release-armv8.sh  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  docker-bake.hcl  docker-compose.dev.yml  docker-compose.offline.yml  docker-compose.yml  package-lock.json  package.json  plan.md  roadmap.md  seed_translations.sql
backend/: .env.example  CMakeLists.txt  Dockerfile  conanfile.py  conanfile.txt
backend/config/: config.json  config.prod.json
backend/migrations/: 001_initial_schema.sql  003_seed_data.sql  004_add_comments.sql  005_seed_comments.sql  010_ai_provider_pref.sql  011_email_inbox.sql  013_articles.sql  013_audit.sql  013_ecommerce.sql  013_galleries.sql  013_passkeys.sql  013_search_indexes.sql  013_video_renditions.sql  013_wiki.sql  014_polls.sql  014_totp.sql  015_oauth.sql
backend/seed/translations/: en.json  ja.json  nl.json  zh.json
backend/seeds/: feature-toggles.json  notifications.json  users.json
backend/src/: cli_daemon_opts.h  cli_dispatch.h  cli_dispatch_daemons.h  cli_dispatch_daemons_table.h  cli_options.h  cli_setup.h  cli_setup_daemons.h  main.cpp
backend/src/commands/: audit_manager.cpp  audit_manager.h  backup_manager.cpp  backup_manager.h  create_admin.cpp  create_admin.h  cron_manager.cpp  cron_manager.h  ecommerce_api.cpp  ecommerce_api.h  image_processor.cpp  job_scheduler.cpp  job_scheduler.h  media_streaming.cpp  notification_router.cpp  notification_router.h  notification_router_adapter.cpp  notification_router_config.h  pdf_generator.cpp  search_indexer.cpp  search_indexer.h  search_indexer_config.h  serve.cpp  serve.h  serve_advice.cpp  video_transcoder.cpp  webhook_dispatcher.cpp
backend/src/constants/: auth-extras.json  blog.json  cron-manager.json  email_templates.json  errors.json  gallery.json  image-processor.json  job-scheduler.json  pdf-generator.json  polls.json  search-indexer.json  seed-gamification.json  seed-notifications.json  video-transcoder.json  webhook-dispatcher.json
backend/src/controllers/: AdminEmailController.cpp  AdminEmailController.h  AdminEnvController.cpp  AdminEnvController.h  AnalyticsControllerSeries.cpp  AnalyticsControllerSummary.cpp  ApiKeyAdminGet.cpp  ApiKeyAdminSet.cpp  ApiKeyController.cpp  AuditController.h  AuditControllerRead.cpp  AuditControllerVerify.cpp  AuthController.cpp  AuthController.h  AuthLogin.cpp  AuthPasswordController.cpp  AuthSsoSessionController.cpp  AuthSsoSessionController.h  AuthTokenController.cpp  AuthTokenMe.cpp  AuthValidateController.cpp  BlogController.h  ChatController.cpp  ChatController.h  ChatHistoryClear.cpp  ChatHistoryList.cpp  CommentsController.cpp  CommentsV2Controller.cpp  CommentsV2Controller.h  CommentsV2Create.cpp  CommentsV2ModController.cpp  CommentsV2ModController.h  CommentsWrite.cpp  ContactController.cpp  ContactController.h  CronController.h  DashboardController.cpp  DocsController.cpp  DocsController.h  EmailAccountController.cpp  (+113 more)
backend/src/docs/: openapi_auth.h  openapi_auth_login.h  openapi_base.h  openapi_chat.h  openapi_misc.h  openapi_misc_features.h  openapi_password.h  openapi_users.h
backend/src/filters/: CookieAuthFilter.cpp  CorsFilter.cpp  CorsFilter.h  JwtAuthFilter.cpp  JwtAuthFilter.h  RateLimitBucketFilter.cpp  RateLimitBucketFilter.h  RateLimitFilter.cpp  RateLimitFilter.h
backend/src/services/: AiClaudeClient.cpp  AiClaudeClient.h  AiHistoryStore.cpp  AiHistoryStore.h  AiOpenAiClient.cpp  AiOpenAiClient.h  AiService.cpp  AiService.h  AiTypes.h  ApiKeyCrud.cpp  ApiKeyDelete.cpp  ApiKeyFallback.cpp  ApiKeyFallback.h  ApiKeyService.cpp  ApiKeyService.h  ApiKeySystem.cpp  ApiKeyUserList.cpp  AuthService.cpp  AuthService.h  BadgeInserter.cpp  BadgeInserter.h  BadgeService.cpp  BadgeService.h  ElasticClient.cpp  ElasticClientAdmin.cpp  ElasticClientCreateIndex.cpp  ElasticClientSearch.cpp  EmailAccountService.cpp  EmailAccountService.h  EmailInboxService.cpp  EmailInboxService.h  EmailService.cpp  EmailService.h  EmailServiceBadge.cpp  EmailServiceTemplates.cpp  GamificationService.cpp  GamificationService.h  ImapSyncService.cpp  ImapSyncService.h  JobBackoff.cpp  (+101 more)
backend/src/utils/: JsonResponse.h  JwtUtil.cpp  JwtUtil.h  PasswordHash.cpp  PasswordHash.h  RoleCheck.h  Validators.cpp  Validators.h
backend/tests/: test_audit_hash_chain.cpp  test_blog_slug_collision.cpp  test_cli_setup_daemons.cpp  test_ecommerce_cart_service.cpp  test_ecommerce_order_service.cpp  test_ecommerce_stripe_webhook.cpp  test_forum_thread_depth.cpp  test_image_vips_processor.cpp  test_impersonate_cookies.cpp  test_infra_kafka_stubs.cpp  test_oauth_user_upsert.cpp  test_passkey_challenge_store.cpp  test_preferences_merge.cpp  test_social_mention_parser.cpp  test_totp_codec.cpp  test_webhooks_hmac_signer.cpp  test_webhooks_retry_schedule.cpp  test_wiki_markdown_sanitize.cpp
tools/cmake-gen/: CMakeLists.txt  conanfile.txt  context_builder.h  file_scanner.h  glob_util.h  json_util.h  main.cpp  template_renderer.h
tools/cmake-gen/templates/: root.cmake.j2
tools/manager/: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  main.cpp  project.json
tools/manager/commands/: ActCmd.cpp  ActCmd.h  ActCmdReg.cpp  ActCmdRun.cpp  BuildCmd.cpp  BuildCmd.h  CmakeGenCmd.cpp  CmakeGenCmd.h  CmakeGenDiscover.h  CmakeGenGlob.h  ConanInstallCmd.cpp  ConanInstallCmd.h  DockerCmd.cpp  DockerCmd.h  DockerDepsCmd.cpp  DockerDepsCmd.h  DockerStatusCmd.cpp  ElasticCmd.cpp  ElasticCmd.h  ElasticCmdDrop.cpp  ElasticCmdReindex.cpp  ElasticCmdStatus.cpp  GenerateCmd.cpp  GenerateCmd.h  LintCmd.cpp  LintCmd.h  LintCmdFmt.cpp  PackageRepoCmd.cpp  PackageRepoCmd.h  PackageRepoCmdReg.cpp  S3Cmd.cpp  S3Cmd.h  S3CmdUp.cpp  SeedTransCmd.cpp  SetupExoticArchCmd.cpp  SetupExoticArchCmd.h  ShellUtil.h  TestCmd.cpp  TestCmd.h  UserCmd.h  (+8 more)
tools/manager/fmt/: core.h
tools/manager/templates/: root.cmake.j2
tools/packagerepo/backend/: CMakeLists.txt  Dockerfile
(+6087 files in other folders)
